[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/music/InCurse.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/main/Level1.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/music/InGame.ogg" type="AudioStream" id=5]
[ext_resource path="res://src/HUD/TimerMalediction.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sound/StartCurse.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/StartGame.ogg" type="AudioStream" id=8]
[ext_resource path="res://src/HUD/HUDStartMessage.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sound/DyingGiraffe.ogg" type="AudioStream" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 2

[node name="Game" type="Node" groups=[
"Gestion",
]]
script = ExtResource( 2 )
Player = ExtResource( 1 )
EndScreen_Path = "res://src/menu/End/ScoreScreen.tscn"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
material = SubResource( 1 )
position = Vector2( -367.427, 16.6643 )
color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[node name="Level" parent="CanvasModulate" instance=ExtResource( 4 )]
position = Vector2( 47.694, 112.484 )

[node name="Players" type="Node" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TimerMalediction" parent="HUD" instance=ExtResource( 6 )]
margin_left = 208.603
margin_top = 3.303
margin_right = 208.603
margin_bottom = 3.303
TempsTimer = 30

[node name="StartMessage" parent="HUD" instance=ExtResource( 9 )]

[node name="Audio" type="Node" parent="."]

[node name="MusicInGame" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )

[node name="MusicInCurse" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )

[node name="StartCurse" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
bus = "SoundEffects"

[node name="StartGame" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 8 )
volume_db = -8.078
bus = "Music"

[node name="Dying" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
[connection signal="Malediction" from="CanvasModulate/Level" to="." method="_on_Level_Malediction"]
